Equalize Handles Operator not working on all selected keyframes #96476

Closed
opened 2022-03-15 03:00:23 +01:00 by Kevin C. Burke · 9 comments
Contributor

System Information
Operating system: Windows-10-10.0.22000-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 3090/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 511.79

Blender Version
Broken: version: 3.1.0, branch: master, commit date: 2022-03-08 18:16, hash: c77597cd0e
Worked: N/A

Short description of error
The Graph Editor's Equalize Handles command does not work on all selected keyframes.

Exact steps for others to reproduce the error

  • Select keyframes
  • Run Key > Snap > Equalize Handles (or F3 > Equalize Handles)

Drag Handle Length Float Property: not all handle lengths change (see screen capture & .blend file)

Equalize Handles.blend
Equalize Handles Bug.gif

**System Information** Operating system: Windows-10-10.0.22000-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 3090/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 511.79 **Blender Version** Broken: version: 3.1.0, branch: master, commit date: 2022-03-08 18:16, hash: `c77597cd0e` Worked: N/A **Short description of error** The Graph Editor's Equalize Handles command does not work on all selected keyframes. **Exact steps for others to reproduce the error** - Select keyframes - Run Key > Snap > Equalize Handles (or F3 > Equalize Handles) # Drag Handle Length Float Property: not all handle lengths change (see screen capture & .blend file) [Equalize Handles.blend](https://archive.blender.org/developer/F12928204/Equalize_Handles.blend) ![Equalize Handles Bug.gif](https://archive.blender.org/developer/F12928202/Equalize_Handles_Bug.gif)
Author
Contributor

Added subscriber: @KevinCBurke

Added subscriber: @KevinCBurke
Author
Contributor

I just realized that this is because the keyframes' handles in my .blend file are 'Auto Clamped'. Equalize Handles does not work with 'Auto Clamped', 'Vector', and 'Automatic 'handles.

I just realized that this is because the keyframes' handles in my .blend file are 'Auto Clamped'. Equalize Handles does not work with 'Auto Clamped', 'Vector', and 'Automatic 'handles.
Author
Contributor

Fixed with this patch: https://developer.blender.org/D14345

Fixed with this patch: https://developer.blender.org/D14345

Added subscriber: @iss

Added subscriber: @iss

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

As I said in patch, I don't know much about workflows involved, so not sure if this should be considered as a bug if code works correctly in currenct state. But since you submitted patch, I guess I will confirm. You don't need to create bug report to submit patch.

As I said in patch, I don't know much about workflows involved, so not sure if this should be considered as a bug if code works correctly in currenct state. But since you submitted patch, I guess I will confirm. You don't need to create bug report to submit patch.
Author
Contributor

@iss Thank you for the tip. I created the bug report initially because I didn't think I'd have the time to submit a patch.

@iss Thank you for the tip. I created the bug report initially because I didn't think I'd have the time to submit a patch.

This issue was referenced by eed8c2e655

This issue was referenced by eed8c2e65554c4df15c6cc4c2177fda269002494

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sybren A. Stüvel self-assigned this 2022-04-28 11:16:19 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#96476
No description provided.